--- a/data/contact/contact_stories.yml
+++ b/data/contact/contact_stories.yml
@@ -1115,4 +1115,97 @@ stories:
           - requested_slot: null
       - active_loop: null
       - action: action_save_contact
+      - action: utter_contact_added_successfullyversion: "3.1"
+
+stories:
+  # Full name handling scenario
+  - story: Add contact - full name with spaces
+    steps:
+      - intent: contact_add_request
+        entities:
+          - contact_add_entity_name: "John Smith"
+          - contact_add_entity_crypto_network: "Bitcoin"
+          - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
+      - slot_was_set:
+          - contact_add_entity_name: "John Smith"
+          - contact_add_entity_crypto_network: "Bitcoin"
+          - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
+      - action: action_check_contact_existence
+      - slot_was_set:
+          - contact_exists: false
+      - slot_was_set:
+          - crypto_network_typo: false
+      - slot_was_set:
+          - multiple_networks_detected: false
+      - action: add_contact_form
+      - active_loop: add_contact_form
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: action_save_contact
+      - action: utter_contact_added_successfully
+  
+  # Titled name handling scenario
+  - story: Add contact - titled name
+    steps:
+      - intent: contact_add_request
+        entities:
+          - contact_add_entity_name: "Mr. Smith"
+          - contact_add_entity_crypto_network: "Bitcoin"
+          - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
+      - slot_was_set:
+          - contact_add_entity_name: "Mr. Smith"
+          - contact_add_entity_crypto_network: "Bitcoin"
+          - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
+      - action: action_check_contact_existence
+      - slot_was_set:
+          - contact_exists: false
+      - slot_was_set:
+          - crypto_network_typo: false
+      - slot_was_set:
+          - multiple_networks_detected: false
+      - action: add_contact_form
+      - active_loop: add_contact_form
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: action_save_contact
+      - action: utter_contact_added_successfully
+
+  # Just name with full name
+  - story: Add contact - just full name
+    steps:
+      - intent: contact_add_request
+        entities:
+          - contact_add_entity_name: "Sophia Miller"
+      - slot_was_set:
+          - contact_add_entity_name: "Sophia Miller"
+      - action: action_check_contact_existence
+      - slot_was_set:
+          - contact_exists: false
+      - slot_was_set:
+          - crypto_network_typo: false
+      - action: add_contact_form
+      - active_loop: add_contact_form
+      - slot_was_set:
+          - requested_slot: contact_add_entity_crypto_network
+      - intent: inform
+        entities:
+          - contact_add_entity_crypto_network: "Bitcoin"
+      - slot_was_set:
+          - contact_add_entity_crypto_network: "Bitcoin"
+      - slot_was_set:
+          - requested_slot: contact_add_entity_wallet_address
+      - intent: inform
+        entities:
+          - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
+      - slot_was_set:
+          - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
+      - action: action_validate_wallet_address
+      - slot_was_set:
+          - address_valid: true
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: action_save_contact
       - action: utter_contact_added_successfully
