fix stories and nlu

--- a/data/contact/contact_response.yml
+++ b/data/contact/contact_response.yml
@@ -115,7 +115,26 @@ responses:
     - text: "Your new contact {contact_add_entity_name} has been successfully added."
     - text: "{contact_add_entity_name} is now in your contacts and ready for transactions."
     - text: "Contact saved successfully! {contact_add_entity_name} has been added to your wallet."
-
+    - text: "Contact saved successfully! {contact_add_entity_name} has been added to your wallet."
+    - text: "Great! I've added {contact_add_entity_name} to your contacts."
+    - text: "Success! {contact_add_entity_name} has been saved with their wallet details."
+    - text: "Contact {contact_add_entity_name} has been successfully added."
+    - text: "Success! {contact_add_entity_name} is now in your contact list."
+    - text: "I've successfully added {contact_add_entity_name} to your wallet contacts."
+    - text: "{contact_add_entity_name} has been added to your address book."
+    - text: "Done! {contact_add_entity_name} is now saved in your contacts."
+    - text: "I've added {contact_add_entity_name} as a new {contact_add_entity_crypto_network} contact."
+    - text: "Your contact list has been updated with {contact_add_entity_name}."
+    - text: "{contact_add_entity_name} has been saved with their {contact_add_entity_crypto_network} address."
+    - text: "All set! {contact_add_entity_name} is now in your contacts list."
+    - text: "I've successfully saved {contact_add_entity_name} to your wallet's address book."
+    - text: "Contact saved! You can now easily send {contact_add_entity_crypto_network} to {contact_add_entity_name}."
+    - text: "Added! {contact_add_entity_name} is now in your crypto contacts."
+    - text: "{contact_add_entity_name}'s details have been successfully saved to your wallet."
+    - text: "Contact addition complete. {contact_add_entity_name} has been added to your list."
+    - text: "I've added {contact_add_entity_name} to your {contact_add_entity_crypto_network} contacts list."
+    - text: "Your new contact {contact_add_entity_name} has been successfully added."
+    - text: "{contact_add_entity_name} is now in your contacts and ready for transactions."
   # Contact already exists
   utter_contact_already_exists:
     - text: "I already have a contact named {contact_add_entity_name}. Would you like to update their information?"
