fix stories and nlu

--- a/data/contact/contact_stories.yml
+++ b/data/contact/contact_stories.yml
@@ -1073,8 +1073,6 @@ stories:
       - action: action_save_contact
       - action: utter_contact_added_successfully
 
-
-
   - story: Add contact - crypto network typo correction sample (Bitcon)
     steps:
       # Initial user request with typo
@@ -1115,7 +1113,7 @@ stories:
           - requested_slot: null
       - active_loop: null
       - action: action_save_contact
-      - action: utter_contact_added_successfullyversion: "3.1"
+      - action: utter_contact_added_successfully
 
   # Full name handling scenario
   - story: Add contact - full name with spaces
