--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-rasa>=3.5.0
-transformers>=4.20.0
-torch>=1.9.0
+rasa==3.6.10
+transformers==4.30.2
+torch==2.0.1
+underthesea==6.2.0
+tensorflow==2.12.0
+tensorflow-hub==0.14.0
+tensorflow-text==2.12.1
+protobuf==3.20.3
+numpy==1.24.3
+scikit-learn==1.2.2
+scipy==1.10.1
+anthropic==0.5.0
+sentencepiece==0.1.99
