Fix MultilingualTokenizer not found error
- Move to proper component structure compatible with Rasa
- Add components directory with Vietnamese tokenizer
- Simplify config.yml to use standard tokenizer
- Add Vietnamese tokenizer testing script
- Update README with troubleshooting information

--- a/config.yml
+++ b/config.yml
@@ -7,15 +7,10 @@ assistant_id: 20250515-042817-booming-inventory
 language: vi,en  # Supporting both Vietnamese and English
 
 pipeline:
-  # Vietnamese tokenization for Vietnamese text
-  - name: "MultilingualTokenizer"
+  # Use WhitespaceTokenizer for all languages (we'll customize tokenization in code)
+  - name: WhitespaceTokenizer
     intent_tokenization_flag: True
     intent_split_symbol: "_"
-    languageInterfaces:
-      vi:
-        name: "UnderthesaTokenizer"
-      en:
-        name: "WhitespaceTokenizer"
   
   # Extract regex features for entities
   - name: RegexFeaturizer
