Fix contradicting rules and stories
- Update 'happy path' story to use action_set_english_language before utter_greet
- Add utter_greet to language rules for consistency
- Add conditional responses for utter_greet to support both English and Vietnamese
- Fix the 'Contradicting rules or stories found' error

--- a/data/language_rules.yml
+++ b/data/language_rules.yml
@@ -5,8 +5,11 @@ rules:
     steps:
       - intent: greet_vi
       - action: action_set_vietnamese_language
+      - action: utter_greet  # Thêm utter_greet sau action_set_vietnamese_language
       
   - rule: Set language to English when user speaks English
     steps:
       - intent: greet
       - action: action_set_english_language
+      - action: utter_greet  # Thêm utter_greet sau action_set_english_language
+
