--- a/data/stories.yml
+++ b/data/stories.yml
@@ -4,7 +4,7 @@ stories:
 - story: happy path
   steps:
   - intent: greet
+  - action: action_set_english_language
   - action: utter_greet
   - intent: mood_great
   - action: utter_happy
-
