--- a/domain.yml
+++ b/domain.yml
@@ -40,6 +40,18 @@ intents:
 
 responses:
   # Basic greeting and introduction
+  utter_greet:
+  - text: "Hello! How can I help you with your crypto wallet today?"
+    condition:
+      - type: slot
+        name: language
+        value: en
+  - text: "Xin chào! Tôi có thể giúp gì cho bạn với ví tiền điện tử của bạn ngày hôm nay?"
+    condition:
+      - type: slot
+        name: language
+        value: vi
+        
   utter_cheer_up:
   - text: "Here is something to cheer you up:"
     image: "https://i.imgur.com/nGF1K8f.jpg"
