--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ protobuf==3.20.3
 numpy==1.24.3
 scikit-learn==1.2.2
 scipy==1.10.1
-anthropic==0.5.0
+openai==0.28.0  # Thay anthropic bằng openai
 sentencepiece==0.1.99
